--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,19 @@ layout: page
 title: Contact me
 permalink: /contact/
 ---
+<hr>
+<h4>Social networks</h4>
 
+<ul>
+	<li><a href="https://www.facebook.com/Dgeeky">Facebook</a></li>
+	<li><a href="https://www.linkedin.com/">Linkedin</a></li>
+	<li><a href="https://twitter.com/djekmani">twiter</a></li>
+</ul>
+<h4>Email</h4>
+<ul>
+	<li><a href="mailto:azzeddine.djekmani@um5s.net.ma">azzeddine.djekmani@um5s.net.ma</a></li>
+</ul>
+<h4>Contact form</h4>
 <div class="py2">
   <form action="https://formspree.io/{{ site.author.email }}"
     method="POST" class="form-stacked form-light">
