--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ permalink: /contact/
 
 <ul>
 	<li><a href="https://www.facebook.com/Dgeeky">Facebook</a></li>
-	<li><a href="https://www.linkedin.com/">Linkedin</a></li>
+	<li><a href="https://ma.linkedin.com/in/djekmani">Linkedin</a></li>
 	<li><a href="https://twitter.com/djekmani">twiter</a></li>
 </ul>
 <h4>Email</h4>
